# model-to-model-evaluation-code

./: .gitignore  README.md  bpmn_schema.py  bpmn_schema_helper.py  genai_gemini_pipeline.py  genai_gpt_pipeline.py  pyproject.toml
.reuse/: dep5
data/: prompt_ex_text_real_set.txt
data/pet/ground_json/: 10_1.json  10_13.json  1_2.json  1_3.json  3_3.json  5_2.json
data/pet/process_descriptions/: 10_1.txt  10_13.txt  10_6.txt  1_2.txt  1_3.txt  3_3.txt  5_2.txt
data/realset/bpmn-minimal-json/: E_j01.json  E_j02.json  E_j03.json  E_j04.json  E_j05.json  G_g01.json  G_g03.json  G_j01.json  M_g01.json  M_g02.json  (+13 more)
evaluation/: bpmn_similarity.py  list_similarity.py  string_similarity.py
examples/: E_j04.json  E_j04_4.bpmn2 _ Signavio.json  changed_10_6.json  changed_1_2.json  changed_3_3.json  misc_booking_flight_tickets.json  misc_claim_to_damages.json  misc_credit_quote_creation.json  misc_loan_brokerage.json  misc_purchase_requisition_to_order.json  original_10_6.json  process_complex.json
model_evaluation/: bpmn_schema_helper.py  bpmn_similarity.py  list_similarity.py  string_similarity.py
model_evalulation/: bpmn_schema.py  sapsam_mapping.py
notebooks/: 05_testing_evaluation.ipynb  code_usage.ipynb  edge_case_comparison.ipynb  evaluation_alternatives_explorations.ipynb  model_eval_code_usage.ipynb  test_roundtrip_pipeline.ipynb
results/: geminipetm2m.csv  geminipett2t.csv  gpt_petm2m.csv  gpt_pett2t.csv  gpt_real_setm2m.csv  gpt_real_sett2t.csv
round_trip/llm_connect/: gen_ai_llm_call.py
round_trip/m2t/: create_description.py  prompt_engineering.py
round_trip/t2m/: create_model.py  prompt_engineering.py
text_evaluation/: text_similarity.py
(+23 files in other folders)
