[tool.poetry]
name = "DATA-SCIENCE-PROJECTS"
version = "0.1.0"
description = ""
authors = ["raheleh <raheleh.hadian@sap.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
sentence_transformers = "^2.2.2"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]

pandas = "^2.1.3"
matplotlib = "^3.8.1"
huggingface-hub = "^0.19.1"
ipython = "^8.17.2"
openpyxl = "^3.1.2"
notebook = "^7.0.6"
openai = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"