[tool.poetry]
name = "MODEL-TO-MODEL-EVALUATION-CODE"
version = "0.1.0"
description = ""
authors = ["raheleh <raheleh.hadian@sap.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "sap"
url = "https://common.repositories.cloud.sap/artifactory/api/pypi/deploy-releases-hyperspace-pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
sentence_transformers = "^2.2.2"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]

pandas = "^2.1.3"
huggingface-hub = "^0.19.1"
ipython = "^8.17.2"
openpyxl = "^3.1.2"
notebook = "^7.0.6"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
generative-ai-hub-sdk = {extras = ["all"], version = "^3.1.1"}
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"